# maids.ng

./: .clinerules  .env-prod  .env.example  .gitignore  .htaccess  .openclaude-profile.json  AGENTS.md  AI_BACKEND_EXPLAINER.md  CLAUDE.md  CONTROL_ROOM_IMPLEMENTATION_PLAN.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  Dockerfile  FEATURE_SUMMARY.md  IMPLEMENTATION_PLAN.md  MAIDS_NG_AMBASSADOR_AGENT_GUIDE.md  MAIDS_NG_CONTROL_ROOM_GUIDE.md  MAIDS_NG_KB_IMPLEMENTATION_GUIDE (1).md  MAIDS_NG_METRICS_READINESS_AUDIT.md  MAIDS_NG_SEO_ENGINE_GUIDE.md  Maids.ng Brand Guidelines v3.0.html  Multi-City-Page-SOP.html  PRODUCTION_READINESS_REPORT.md  README-DEPLOYMENT.md  README.md  REVIEW.md  SETUP.md  UPLOAD_CHECKLIST.md  admin-login.html  admin.html  agency.html  check.php  clear-all-cache.php  composer.json  contact.html  debug_settings.php  deploy.php  diagnose-settings.php  docker-compose.yml  employer.html  (+38 more)
.github/: copilot-instructions.md
.trae/: TODO.md
backend/: .env.example  README.md  composer.json
bootstrap/: app.php  providers.php
cli/: README.md  pyproject.toml
cli/maids_cli/: main.py
cli/maids_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/maids_cli/client/: api_client.py  schemas.py
cli/maids_cli/commands/: auth.py  bookings.py  matching.py  users.py  wallet.py
config/: audit.php  logging.php  mcp.php  services.php  sms.php
database/: database.sql  database.sqlite
docker/: php.ini
docs/: agent-api.md
graphify-out/: .graphify_root  GRAPH_REPORT.md  manifest.json
js/: admin-dashboard.js  api-service.js
(+916 files in other folders)
