[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maids-cli"
version = "0.1.0"
description = "Maids.ng CLI Tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
maids = "maids_cli.main:app"
